--- a/tikz-figures/active-set-eg.tex
+++ b/tikz-figures/active-set-eg.tex
@@ -1,7 +1,7 @@
-\begin{figure}[H]
+\begin{figure}[ht]
 \centering
 \larger[1]
-\begin{tikzpicture}[scale=2.4, circle defined by/.style args={center #1 and point #2}{insert path={let \p1=($(#2)-(#1)$),\n1={veclen(\x1,\y1)} in (#1) circle[radius=\n1]}}]
+\begin{tikzpicture}[scale=2.3, circle defined by/.style args={center #1 and point #2}{insert path={let \p1=($(#2)-(#1)$),\n1={veclen(\x1,\y1)} in (#1) circle[radius=\n1]}}]
 % \draw[gray!30, thin, dashed] (-0.5, -0.5) grid (4.6, 3.9);
 \coordinate (C) at (1, 2.5);
 % coordinate axes
