--- a/tikz-figures/active-set-eg.tex
+++ b/tikz-figures/active-set-eg.tex
@@ -1,26 +1,35 @@
+\newif\ifsteparrows
+% \steparrowstrue
+\steparrowsfalse
+
 \begin{figure}[ht]
 \centering
 \larger[1]
-\begin{tikzpicture}[scale=2.3, circle defined by/.style args={center #1 and point #2}{insert path={let \p1=($(#2)-(#1)$),\n1={veclen(\x1,\y1)} in (#1) circle[radius=\n1]}}]
+\begin{tikzpicture}[scale=2.5, circle defined by/.style args={center #1 and point #2}{insert path={let \p1=($(#2)-(#1)$),\n1={veclen(\x1,\y1)} in (#1) circle[radius=\n1]}}]
 % \draw[gray!30, thin, dashed] (-0.5, -0.5) grid (4.6, 3.9);
 \coordinate (C) at (1, 2.5);
 % coordinate axes
-\draw[-{Stealth}] (-0.5, 0)--(4.7, 0) node [right] {$x_1$};
-\draw[-{Stealth}] (0, -0.5)--(0, 3.7) node [above] {$x_2$};
+\draw[-{Stealth}] (-0.3, 0)--(4.7, 0) node [right] {$x_1$};
+\draw[-{Stealth}] (0, -0.3)--(0, 3.7) node [above] {$x_2$};
 % feasible region
 \draw[fill=gray!20] (0, 1) node (p1) [left] {$(0, 1)$} -- (2, 2) node (p2) [above] {$(2, 2)$} -- (4, 1) node (p3) [right] {$(4, 1)$} -- (2, 0) node (p4) [below] {$(2, 0)$} -- (0, 0);
 % iterations of the active-set algorithm
-\node[below = -0.1 of p4] (x01) {$\V{x}^{(0)}, \V{x}^{(1)}$};
-\draw[dashed, line width=3] (2, 0) -- (1, 0) node (x23) [below] {$\V{x}^{(2)}, \V{x}^{(3)}$};
+\node[below = -0.1 of p4] (x01) {$\V{x}^{(1)}, \V{x}^{(0)}$};
+\draw[dashed, line width=3] (2, 0) -- (1, 0) node (x23) [below] {$\V{x}^{(3)}, \V{x}^{(2)}$};
 \path[name path = line1] (0, 1) -- (2, 2);
 \path[name path = vertical1] (1, 0) -- (1, 4);
 \draw[dashed, line width=3, name intersections = {of = line1 and vertical1, by = {x4}}]  (1, 0) -- (x4);
-\node[above = -0.1 of x4] {$\V{x}^{(4)}$};
+\node[below right = -0.2 and -0.1 of x4] (xx4) {$\V{x}^{(4)}$};
+\draw[dashdotted, thin] (x4) -- (C) node[above] (barx3) {$\bar{\V{x}}^{(3)}$};
+\draw plot[only marks,mark=x,mark size=2] (C);
+\node[right = -0.2 of barx3] {\smaller 不可行};
+\path (barx3) edge [draw, bend right, -{Stealth}] ([xshift=-2, yshift=2]x4);
 \coordinate (c1) at (0, 1);
 \coordinate (c2) at (2, 2);
 \coordinate (x5) at ($(c1)!(C)!(c2)$);
 \draw[dashed, line width=3] (x4) -- (x5);
-\node[above = -0.1 of x5] {$\V{x}^{(5)}$};
+\node[below right = -0.1 and -0.2 of x5] {$\V{x}^{(5)}$};
+\foreach \x in {(2,0), (1,0), (x4), (x5)} \draw[fill=black] \x circle (0.06);
 % contour: circles
 \begin{scope}
 % \clip (-.6, -.3) rectangle (3, 3.2);
@@ -38,6 +47,14 @@
 \coordinate (p8) at ($(C)!0.75!(p7)$);
 \draw[dashed, circle defined by=center C and point p8];
 \end{scope}
+
+\ifsteparrows
+\path ([xshift=5]x01.south) edge [draw, bend left, -{Stealth}] ([xshift=-7]x01.south);
+\path ([yshift=3]x01.west) edge [draw, -{Stealth}] ([xshift=-4, yshift=-3]x23.east);
+\path ([xshift=5]x23.south) edge [draw, bend left, -{Stealth}] ([xshift=-7]x23.south);
+\path (0.9, 0.1) edge [draw, bend left, -{Stealth}] (barx3.west);
+\path ([xshift=-0.3, yshift=2]x4) edge [draw, bend left, -{Stealth}] ([xshift=-1, yshift=2]x5);
+\fi
 \end{tikzpicture}
 \caption{积极集法求解例\ref{eg:qp-active-set-algo}的迭代示意图}
 \label{fig:active-set-eg}
