--- a/content/exercises.tex
+++ b/content/exercises.tex
@@ -1,31 +1,17 @@
 \subsection*{习题}
-% NOT finished
+% finished
 
 \begin{enumerate}
-\item 考虑等式约束的二次规划问题
-\begin{equation*}
-\begin{array}{cl}
-\text{minimize} & q(x) := \frac{1}{2} x^T G x + d^T x, \\
-\text{subject to} & A^T x = b,
-\end{array}
-\end{equation*}
-设$A$列满秩, $Z$为矩阵$A$的列零空间的一组基构成的矩阵, 既约Hessian阵$Z^T G Z$正定. 证明
-\begin{itemize}
-    \item[(1)] KKT矩阵$\begin{bmatrix} G & A \\ A^T & 0 \end{bmatrix}$非奇异;
-    \item[(2)] 该二次规划问题有唯一极小点, 该点就是唯一的全局最优解.
-\end{itemize}
 
 \item 写出二次规划问题
 \begin{equation*}
 \begin{array}{cl}
-\text{maximize} & q(x) = 6x_1 + 4x_2 - 13 - x_1^2 - x_2^2, \\
+\text{maximize} & q(\V{x}) = 6x_1 + 4x_2 - 13 - x_1^2 - x_2^2, \\
 \text{subject to} & x_1 + x_2 \leqslant 3, \\
 & x_1, ~ x_2 \geqslant 0
 \end{array}
 \end{equation*}
 的KKT条件. 写出上述规划问题的对偶问题, 以及对偶问题的对偶问题.
-
-\item SCHUR-COMPLEMENT METHOD
 
 \item 分别利用直接消元法以及正交分解法(广义消元法)求解如下的等式约束的二次规划问题, 并检查它们得到的解是否相同.
 \begin{equation*}
@@ -36,5 +22,70 @@
 \end{array}
 \end{equation*}
 
-\item 用积极集法求解下面的二次规划问题
+\item 设$\V{x}^*$是二次规划问题\eqref{eq:quadratic-programming-1}的解, 证明$\V{x}^*$也是下列线性规划问题的解
+\begin{equation*}
+\begin{array}{cl}
+\text{minimize} & \V{x}^T \left( G \V{x} + \V{d} \right), \\
+\text{subject to} & \V{a}_i^T \V{x} = b_i, ~~ i \in \mathcal{E}, \\
+& \V{a}_i^T \V{x} \leqslant b_i, ~~ i \in \mathcal{I},
+\end{array}
+\end{equation*}
+
+\item 令$A$是一个$n \times m$的列满秩的矩阵, 求$n$维空间中一点$\V{x}_0$到$\{ x : ~ A^T \V{x} = \V{b} \}$最短距离的问题可以表述为如下的等式约束二次规划问题
+\begin{equation*}
+\begin{array}{cl}
+\text{minimize} & \frac{1}{2} \left( \V{x} - \V{x}_0 \right)^T \left( \V{x} - \V{x}_0 \right), \\
+\text{subject to} & A^T x = b,
+\end{array}
+\end{equation*}
+证明该问题的解以及拉格朗日乘子为
+\begin{equation*}
+\begin{aligned}
+\V{x}^* & = \V{x}_0 + A \left( A^T A \right)^{-1} \left( \V{b} - A^T \V{x}_0 \right), \\
+\V{\lambda}^* & = \left( A^T A \right)^{-1} \left( \V{b} - A^T \V{x}_0 \right),
+\end{aligned}
+\end{equation*}
+并进一步证明当$A = \V{a}$是一个列向量时, 从点$\V{x}_0$到$\R^n$中的超平面$\{ x : ~ \V{a}^T \V{x} = b \}$最短距离等于$\dfrac{\lvert b - \V{a}^T \V{x} \rvert}{\lVert \V{a} \rVert_2}.$
+
+\item 设$G$是$n$阶可逆方阵, $A$是$n\times m$的矩阵且$A$列满秩. 令$K = \begin{bmatrix} G & A \\ A^T & 0 \end{bmatrix}.$ 证明
+\begin{itemize}
+    \item[(1)] 方阵$K$可逆;
+    \item[(2)] 方阵$K$的逆矩阵可以由式\eqref{eq:quadratic-programming-kkt-inv-1}给出.
+\end{itemize}
+
+\item 考虑等式约束的二次规划问题\eqref{eq:quadratic-programming-eq-constrained}. 设$G$半正定, $A \neq 0$列满秩, $Z$为矩阵$A$的列零空间的一组基构成的矩阵, $K = \begin{bmatrix} G & A \\ A^T & 0 \end{bmatrix}$是KKT矩阵. 证明
+\begin{itemize}
+    \item[(1)] KKT矩阵$K$总是不定的;
+    \item[(2)] 若进一步假设既约Hessian阵$Z^T G Z$正定, 则KKT矩阵$K$非奇异, 并且其逆可由式\eqref{eq:quadratic-programming-kkt-inv-2}给出;
+    \item[(3)] 若既约Hessian阵$Z^T G Z$正定, 该二次规划问题有唯一极小点, 该点就是唯一的全局最优解;
+    \item[(4)] 假设方程$A^⊤ \V{x} = \V{b}, ~ G \V{x} + A \V{\lambda} = − \V{d}$有解. 如果既约Hessian阵$Z^T G Z$半正定且奇异, 那么问题\eqref{eq:quadratic-programming-eq-constrained}有无穷多解;
+    \item[(5)] 如果既约Hessian阵$Z^T G Z$不定, 或者方程$G \V{x} + A \V{\lambda} = − \V{d}$无解, 则问题\eqref{eq:quadratic-programming-eq-constrained}的目标函数无界.
+\end{itemize}
+
+\item 证明二次规划问题\eqref{eq:quadratic-programming-1}的KKT条件\eqref{eq:quadratic-programming-kkt}与利用积极集表达的KKT条件\eqref{eq:qp-active-set-kkt}等价.
+
+\item 分别以$\{3\},$ $\{5\},$ 以及$\emptyset$为初始积极集$\mathcal{A},$ 用积极集法求解例\ref{eg:qp-active-set-algo}中的不等式约束的二次规划问题.
+
+\item 假设积极集法选取的初始积极集$\mathcal{A}$中约束的梯度是线性无关的, 即$\{ \V{a}_i: ~ i \in \mathcal{A} \}$是线性无关组, 并且在随后某一步, 根据式\eqref{eq:qp-active-set-step-len-2}添加了一条阻滞约束$j$到积极集$\mathcal{A}$中. 证明阻滞约束的梯度$\V{a}_j$与该集合中其余向量线性无关.
+
+另一方面, 当我们从积极集中按式\eqref{eq:qp-active-set-inactive-index}删去一条非积极约束, 显然不会改变当前积极集中梯度向量组成线性无关组这一性质. 由此, 由归纳法可知, 积极集法的迭代步中关于积极集的修正策略, 可以移植保持积极集对应的约束的梯度向量组线性无关这一性质.
+
+\item 假设在积极集法的第$k$步, 我们按式\eqref{eq:qp-active-set-inactive-index}删去一条非积极约束$q.$ 证明下一步的搜索方向$\V{p}^{(k+1)}$是目标函数$q(\V{x})$的严格下降方向(即$\left( \V{p}^{(k+1)} \right)^T \V{g}^{(k+1)} < 0$), 且该方向是严格可行的(即$\left( \V{p}^{(k+1)} \right)^T \V{a}_q > 0$).
+
+\item 利用矩阵增加或者减少一行时的QR分解的更新方法编写积极集法\ref{algo:active-set}的程序, 并用其求解二次规划问题
+\begin{equation*}
+\begin{array}{cl}
+\text{minimize} & x_1^2 + 2x_2^2 -2x_1x_2 - 2x_1 - 6x_2, \\
+\text{subject to} & -x_1 - x_2 \leqslant -2, \\
+& -x_1 + 2x_2 \leqslant 2, \\
+& -x_1 \leqslant 0,\\
+& -x_2 \leqslant 0.
+\end{array}
+\end{equation*}
+选取三个初始点: 一个在可行域的内部(例如$(3, 1)^T$)、一个在顶点(例如$(\frac{2}{3}, \frac{4}{3})^T$)、一个在可行域的边界上, 但不是顶点(例如$(4, 0)^T$),
+
+提示：可以利用Matlab的\texttt{qr.m}, \texttt{qrinsert.m}和\texttt{qrdelete.m}函数, 或者利用Python \texttt{scipy}软件包的\texttt{scipy.linalg.qr}, \texttt{scipy.linalg.qr\_insert}和\texttt{scipy.linalg.qr\_delete}函数.
+
+% \item 用积极集法求解下面的二次规划问题
+
 \end{enumerate}
