--- a/content/subsec-active-set-alg.tex
+++ b/content/subsec-active-set-alg.tex
@@ -39,7 +39,7 @@
 \text{subject to} & \V{a}_i^T \V{s} = 0, ~ i \in \mathcal{A},
 \end{array}
 \end{equation}
-其中$\V{g}^{(k)} = \nabla q(\V{x}^{(k)}) = G \V{x}^{(k)} + \V{d}$是原二次规划问题\eqref{eq:quadratic-programming-1}的目标函数$q(\V{x})$在点$\V{x}^{(k)}$处的梯度向量. 这个问题是一个等式约束的二次规划问题, 可以用上一小节\S\ref{subsec:7.2.1}中介绍的等式约束二次规划问题的求解方法进行求解.
+其中$\V{g}^{(k)} = \nabla q(\V{x}^{(k)}) = G \V{x}^{(k)} + \V{d}$是原二次规划问题\eqref{eq:quadratic-programming-1}的目标函数$q(\V{x})$在点$\V{x}^{(k)}$处的梯度向量. 这个问题是一个等式约束的二次规划问题, 可以用上一小节\S\ref{subsec:7.2.1}~中介绍的等式约束二次规划问题的求解方法进行求解.
 
 记问题\eqref{eq:qp-active-set-2}的解为$\V{s}^{(k)},$ 我们需要对各种可能的情况进行分类讨论.
 
@@ -187,10 +187,10 @@ q = \argmin_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)},
 \V{x}^* = \V{x}^{(5)} = (1.4, 1.7)^T.
 \end{equation*}
 
-我们将每一步的数值结果总结在表\ref{tab:active-set-eg}中. 表中的``$\backslash$''表示当前迭代步不需要计算相应的量.
+我们将每一步的数值结果总结在表\ref{tab:active-set-eg}~中. 表中的``$\backslash$''表示当前迭代步不需要计算相应的量.
 
 \begin{table}[H]
-    \caption{积极集法求解例\ref{eg:qp-active-set-algo}数值结果}
+    \caption{积极集法求解例\ref{eg:qp-active-set-algo}~数值结果}
     \label{tab:active-set-eg}
     \centering
     \begin{tabular}{cccccccccc}
@@ -211,6 +211,6 @@ q = \argmin_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)},
 
 我们接下来对积极集法进行进一步的说明, 以阐明一些尚未讨论的问题. 首先是关于初始可行点$\V{x}^{(0)}$以及初始积极集$\mathcal{A}$的选取. 我们可以利用人工变量法, 求解辅助问题得$\V{x}^{(0)}.$ $\mathcal{A}$可以选取为$\mathcal{A}(\V{x}^{(0)}),$ 也可以选取$\mathcal{A}(\V{x}^{(0)})$的任何一个子集, 即$\mathcal{A} \subseteq \mathcal{A}(\V{x}^{(0)}).$ 不同的选取方式会导致不同的迭代过程, 但算得的最终结果是一样的, 这里不作过多讨论.
 
-其次是积极集法的有限终止性. 事实上, 我们已经从表\ref{tab:active-set-eg}中观察到了, 如果$\alpha_k \neq 0,$ 那么目标函数值总是下降的. 更具体来说, 我们假设初始积极集$\mathcal{A}$中约束的梯度是线性无关的, 那么对积极集的修正策略可以确保梯度线性无关这一性质对后面所有的积极集都成立. 这样一来, 等式问题\eqref{eq:qp-active-set-2}总是适定的. 一个重要的观察是, 如果某一步(设为第$k$步)的等式问题\eqref{eq:qp-active-set-2}解为$\V{s}^{(k)} = \V{0},$ 那么当前点$\V{x}^{(k)}$是等式问题\eqref{eq:qp-active-set-1}的全局极小值点. 如果算法在这一步未终止, 即当前点$\V{x}^{(k)}$不是原问题\eqref{eq:quadratic-programming-1}的解, 此时会有某个积极约束变成非积极的, 下一步的搜索方向$\V{p}^{(k+1)}$会是目标函数$q(\V{x})$的严格下降方向. 那么此后迭代步中的目标函数值都会严格小于$q(\V{x}^{(k)}),$ 进而知此后迭代步中的积极集不可能与当前第$k$步的积极集相同, 否则与$\V{x}^{(k)}$是等式问题\eqref{eq:qp-active-set-1}的全局极小值点这一事实产生矛盾. 另一个重要观察是, 设$\V{s}^{(k)} = \V{0},$ 那么至多$n$步迭代之后的第$k'$步, 我们又会遇到$\V{s}^{(k')} = \V{0}$是等式问题\eqref{eq:qp-active-set-2}的解这种情况. 证明我们留给读者完成. 那么综上所述, 积极集法的每$n$次迭代中, 我们至少会遇到其中某一步, 使得当前点是等式问题\eqref{eq:qp-active-set-1}的全局极小值, 并且在往后的迭代中, 这一步的积极集不会再次出现. 但是, 所有可能的积极集的数目是有限的, 也就是说, 积极集法必然在有限步之内以找到原问题的最优解而结束.
+其次是积极集法的有限终止性. 事实上, 我们已经从表\ref{tab:active-set-eg}~中观察到了, 如果$\alpha_k \neq 0,$ 那么目标函数值总是下降的. 更具体来说, 我们假设初始积极集$\mathcal{A}$中约束的梯度是线性无关的, 那么对积极集的修正策略可以确保梯度线性无关这一性质对后面所有的积极集都成立. 这样一来, 等式问题\eqref{eq:qp-active-set-2}总是适定的. 一个重要的观察是, 如果某一步(设为第$k$步)的等式问题\eqref{eq:qp-active-set-2}解为$\V{s}^{(k)} = \V{0},$ 那么当前点$\V{x}^{(k)}$是等式问题\eqref{eq:qp-active-set-1}的全局极小值点. 如果算法在这一步未终止, 即当前点$\V{x}^{(k)}$不是原问题\eqref{eq:quadratic-programming-1}的解, 此时会有某个积极约束变成非积极的, 下一步的搜索方向$\V{p}^{(k+1)}$会是目标函数$q(\V{x})$的严格下降方向. 那么此后迭代步中的目标函数值都会严格小于$q(\V{x}^{(k)}),$ 进而知此后迭代步中的积极集不可能与当前第$k$步的积极集相同, 否则与$\V{x}^{(k)}$是等式问题\eqref{eq:qp-active-set-1}的全局极小值点这一事实产生矛盾. 另一个重要观察是, 设$\V{s}^{(k)} = \V{0},$ 那么至多$n$步迭代之后的第$k'$步, 我们又会遇到$\V{s}^{(k')} = \V{0}$是等式问题\eqref{eq:qp-active-set-2}的解这种情况. 证明我们留给读者完成. 那么综上所述, 积极集法的每$n$次迭代中, 我们至少会遇到其中某一步, 使得当前点是等式问题\eqref{eq:qp-active-set-1}的全局极小值, 并且在往后的迭代中, 这一步的积极集不会再次出现. 但是, 所有可能的积极集的数目是有限的, 也就是说, 积极集法必然在有限步之内以找到原问题的最优解而结束.
 
 我们最后要强调的是, 积极集法的重要特征是: 积极集改变后, 要有效求解等式约束的二次规划问题\eqref{eq:qp-active-set-2}. 在每次迭代中, 我们并不重新分解KKT矩阵($O(n3)$的运算复杂度), 而是根据积极集$\mathcal{A}$的变化更新算法所需要的因子($O(n2)$的运算复杂度). 不同的方法采用不同的矩阵分解以便这种更新是可行且有效的.
