--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,11 @@
      number = {2},
       pages = {117--129}
 }
+
+@book{nocedal_2006_num_opt,
+      title = {{Numerical Optimization}},
+     author = {Nocedal, Jorge and Wright, Stephen J.},
+        doi = {10.1007/978-0-387-40065-5},
+       year = {2006},
+  publisher = {{Springer New York}}
+}
