--- a/content/exercises.tex
+++ b/content/exercises.tex
@@ -82,9 +82,9 @@
 & -x_2 \leqslant 0.
 \end{array}
 \end{equation*}
-选取三个初始点: 一个在可行域的内部(例如$(3, 1)^T$)、一个在顶点(例如$(\frac{2}{3}, \frac{4}{3})^T$)、一个在可行域的边界上, 但不是顶点(例如$(4, 0)^T$),
+选取三个初始点: 一个在可行域的内部(例如$(3, 1)^T$); 一个在顶点(例如$(\frac{2}{3}, \frac{4}{3})^T$); 一个在可行域的边界上, 但不是顶点(例如$(4, 0)^T$).
 
-提示：可以利用Matlab的\texttt{qr.m}, \texttt{qrinsert.m}和\texttt{qrdelete.m}函数, 或者利用Python \texttt{scipy}软件包的\texttt{scipy.linalg.qr}, \texttt{scipy.linalg.qr\_insert}和\texttt{scipy.linalg.qr\_delete}函数.
+提示: 可以利用Matlab的\texttt{qr.m}, \texttt{qrinsert.m}和\texttt{qrdelete.m}函数, 或者利用Python \texttt{scipy}软件包的\texttt{scipy.linalg.qr}, \texttt{scipy.linalg.qr\_insert}和\texttt{scipy.linalg.qr\_delete}函数.
 
 % \item 用积极集法求解下面的二次规划问题
 
