--- a/chap7_in_one.tex
+++ b/chap7_in_one.tex
@@ -36,12 +36,13 @@
 \usetikzlibrary{trees,arrows.meta,decorations.pathmorphing,decorations.pathreplacing,shapes,shapes.geometric,backgrounds,positioning,calc,tikzmark,hobby,intersections}
 % \usepackage{tkz-euclide}
 
-\usepackage[slantfont,boldfont]{xeCJK}
+\usepackage[slantfont,boldfont]{xeCJK}  % 这个只有用XeLaTeX编译才需要
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % set chn font
+% 这个在Windows下应该不需要
 \setCJKmainfont{Noto Serif CJK SC}
 \setCJKsansfont{Noto Sans CJK SC}
 \setCJKmonofont{Noto Sans Mono CJK SC}
@@ -89,6 +90,7 @@
 \setcounter{section}{2}
 
 \begin{document}
+
 \maketitle
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -97,6 +99,7 @@
 
 \section{二次规划}
 \label{sec:7.2}
+
 % finished
 
 具有二次目标函数和线性约束的约束优化问题被称为二次规划 (quadratic programming, QP) 问题. 这是一类非常常见的约束优化问题, 且它们也常常作为一般的约束优化问题的子问题出现. 二次规划问题的一般形式为
@@ -108,7 +111,7 @@
 & \V{a}_i^T \V{x} \leqslant b_i, ~~ i \in \mathcal{I} = \{m_1 + 1, \ldots, m\},
 \end{array}
 \end{equation}
-其中$G$是$n$阶对称方阵, $\V{d}, \V{a}_i,$ 是$n$维列向量, $b_i$是常数, $i \in \mathcal{E} \cup \mathcal{I},$ 约束条件有等式约束以及不等式约束. 以上形式的二次规划问题可以将约束条件以矩阵的形式表达为更加紧凑的形式：
+其中$G$是$n$阶对称方阵, $\V{d}, \V{a}_i,$ 是$n$维列向量, $b_i$是常数, $i \in \mathcal{E} \cup \mathcal{I},$ 约束条件有等式约束以及不等式约束. 以上形式的二次规划问题可以将约束条件以矩阵的形式表达为更加紧凑的形式:
 \begin{equation}
 \label{eq:quadratic-programming-2}
 \begin{array}{cl}
@@ -732,9 +735,9 @@ q = \argmin_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)},
 & -x_2 \leqslant 0.
 \end{array}
 \end{equation*}
-选取三个初始点: 一个在可行域的内部(例如$(3, 1)^T$)、一个在顶点(例如$(\frac{2}{3}, \frac{4}{3})^T$)、一个在可行域的边界上, 但不是顶点(例如$(4, 0)^T$),
+选取三个初始点: 一个在可行域的内部(例如$(3, 1)^T$); 一个在顶点(例如$(\frac{2}{3}, \frac{4}{3})^T$); 一个在可行域的边界上, 但不是顶点(例如$(4, 0)^T$).
 
-提示：可以利用Matlab的\texttt{qr.m}, \texttt{qrinsert.m}和\texttt{qrdelete.m}函数, 或者利用Python \texttt{scipy}软件包的\texttt{scipy.linalg.qr}, \texttt{scipy.linalg.qr\_insert}和\texttt{scipy.linalg.qr\_delete}函数.
+提示: 可以利用Matlab的\texttt{qr.m}, \texttt{qrinsert.m}和\texttt{qrdelete.m}函数, 或者利用Python \texttt{scipy}软件包的\texttt{scipy.linalg.qr}, \texttt{scipy.linalg.qr\_insert}和\texttt{scipy.linalg.qr\_delete}函数.
 
 % \item 用积极集法求解下面的二次规划问题
 
