--- a/content/intro.tex
+++ b/content/intro.tex
@@ -1,3 +1,5 @@
+% finished
+
 具有二次目标函数和线性约束的约束优化问题被称为二次规划 (quadratic programming, QP) 问题. 这是一类非常常见的约束优化问题, 且它们也常常作为一般的约束优化问题的子问题出现. 二次规划问题的一般形式为
 \begin{equation}
 \label{eq:quadratic-programming-1}
@@ -7,7 +9,7 @@
 & \V{a}_i^T \V{x} \leqslant b_i, ~~ i \in \mathcal{I} = \{m_1 + 1, \ldots, m\},
 \end{array}
 \end{equation}
-其中$G$是$n$阶对称方阵, $\V{d}, \V{a}_i,$ 是$n$维列向量, $b_i$是常数, $i \in \mathcal{E} \cup \mathcal{I},$ 约束条件有等式约束以及不等式约束. 以上形式的二次规划问题可以将约束条件以矩阵的形式表达为更加紧凑的形式：
+其中$G$是$n$阶对称方阵, $\V{d}, \V{a}_i,$ 是$n$维列向量, $b_i$是常数, $i \in \mathcal{E} \cup \mathcal{I},$ 约束条件有等式约束以及不等式约束. 以上形式的二次规划问题可以将约束条件以矩阵的形式表达为更加紧凑的形式:
 \begin{equation}
 \label{eq:quadratic-programming-2}
 \begin{array}{cl}
