--- a/notebooks/eq-qp-example.ipynb
+++ b/notebooks/eq-qp-example.ipynb
@@ -73,7 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psi = sp.simplify(qx.subs([(x1, sp.Rational(1, 3) * x3), (x2, 1 - sp.Rational(4, 3) * x3)]))\n",
+    "psi = sp.simplify(\n",
+    "    qx.subs([(x1, sp.Rational(1, 3) * x3), (x2, 1 - sp.Rational(4, 3) * x3)])\n",
+    ")\n",
     "psi"
    ]
   },
@@ -121,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = - G @ sp.Matrix(3, 1, [sp.Rational(2, 5), -sp.Rational(3, 5), sp.Rational(6, 5)]) - d\n",
+    "g = -G @ sp.Matrix(3, 1, [sp.Rational(2, 5), -sp.Rational(3, 5), sp.Rational(6, 5)]) - d\n",
     "g"
    ]
   },
@@ -210,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z = sp.Matrix(list(sp.linsolve((A.T, sp.zeros(2,1)))))\n",
+    "Z = sp.Matrix(list(sp.linsolve((A.T, sp.zeros(2, 1)))))\n",
     "Z = Z.subs(\"tau0\", 1).T\n",
     "Z = Z / Z.norm()\n",
     "Z"
@@ -267,14 +269,126 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda_star = - Y.T @ (G @ x_star + d)\n",
+    "lambda_star = -Y.T @ (G @ x_star + d)\n",
     "lambda_star"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8174a413",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8da46bd",
+   "metadata": {},
+   "source": [
+    "## 数值求解"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cc4d175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import linalg as SLA\n",
+    "\n",
+    "from qp_algo import qp_eq, qp_eq_qr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10653871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G_mat = np.array([[2, 5, 0], [5, 2, 0], [0, 0, 4]])\n",
+    "A_mat = np.array([[1, 1], [1, -2], [1, -3]])\n",
+    "d_vec = np.array([0, -3, -7])\n",
+    "b_vec = np.array([1, -2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf135910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol, lam = qp_eq(G_mat, d_vec, A_mat, b_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "832cc322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27622f20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd2640a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "976a9d96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q_mat, R_mat = SLA.qr(A_mat)\n",
+    "\n",
+    "sol, lam = qp_eq_qr(G_mat, d_vec, A_mat, Q_mat, R_mat, b_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f79500e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97e07b6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab006167",
    "metadata": {},
    "outputs": [],
    "source": []
