update python code

--- a/notebooks/eq-qp-example.ipynb
+++ b/notebooks/eq-qp-example.ipynb
@@ -388,7 +388,104 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab006167",
+   "id": "7a7cb377",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12d115e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca63e64",
+   "metadata": {},
+   "source": [
+    "# 利用积极集法求解含不等式约束的二次规划问题\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\begin{array}{cl}\n",
+    "\\text{minimize} & q(x) = (x_1 - 1)^2 + (x_2 - 2.5)^2, \\\\\n",
+    "\\text{subject to} & -x_1 + 2x_2 - 2 \\leqslant 0, \\\\\n",
+    "& x_1 + 2x_2 - 6 \\leqslant 0, \\\\\n",
+    "& x_1 - 2x_2 - 2 \\leqslant 0, \\\\\n",
+    "& -x_1 \\leqslant 0, \\\\\n",
+    "& -x_2 \\leqslant 0,\n",
+    "\\end{array}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea3823a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import linalg as SLA\n",
+    "\n",
+    "from qp_algo import qp_active_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9864309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G_mat_asm = 2 * np.eye(2, dtype=float)\n",
+    "A_mat_asm = np.array([[-1, 2], [1, 2], [1, -2], [-1, 0], [0, -1]], dtype=float).T\n",
+    "b_vec_asm = np.array([2, 6, 2, 0, 0], dtype=float)\n",
+    "d_vec_asm = np.array([-2, -5], dtype=float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de5d8e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c51b50f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol, trace_dict = qp_active_set(\n",
+    "    G_mat_asm,\n",
+    "    d_vec_asm,\n",
+    "    A_mat_asm,\n",
+    "    b_vec_asm,\n",
+    "    np.array([2, 0], dtype=float),\n",
+    "    0,\n",
+    "    verbose=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28c81f04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07f82152",
    "metadata": {},
    "outputs": [],
    "source": []
