--- a/chap7.tex
+++ b/chap7.tex
@@ -3,84 +3,9 @@
 % TeX Live version: 2022
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% preamble
 \documentclass{SBCbookchapter}
-% \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[english]{babel}
-\usepackage{graphicx}
-\usepackage{amsmath,amsfonts,amssymb,mathrsfs}
-\usepackage{txfonts}  % 可以不用
-\usepackage{float}
-\usepackage{multirow}
-\usepackage{mathalfa}
-\usepackage{enumitem}
-\usepackage{bm}
-\usepackage{relsize}
-\usepackage[figurename=图,tablename=表]{caption}
-\usepackage{chngcntr}
-\counterwithin{figure}{section}
-\counterwithin{table}{section}
 
-\usepackage{arydshln}
-\setlength{\dashlinegap}{2pt}
-\setlength{\dashlinedash}{2pt}
-
-\usepackage[ruled,linesnumbered,algosection]{algorithm2e}
-\renewcommand*{\algorithmcfname}{算法}
-\renewcommand*{\algorithmautorefname}{算法}
-
-\usepackage{tikz}
-\usetikzlibrary{trees,arrows.meta,decorations.pathmorphing,decorations.pathreplacing,shapes,shapes.geometric,backgrounds,positioning,calc,tikzmark,hobby,intersections}
-% \usepackage{tkz-euclide}
-
-\usepackage[slantfont,boldfont]{xeCJK}  % 这个只有用XeLaTeX编译才需要
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% set chn font
-% 这个在Windows下应该不需要
-\setCJKmainfont{Noto Serif CJK SC}
-\setCJKsansfont{Noto Sans CJK SC}
-\setCJKmonofont{Noto Sans Mono CJK SC}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% custom commands
-\makeatletter
-\newcommand{\mylabel}[2]{#2\def\@currentlabel{#2}\label{#1}}
-\makeatother
-
-\newcommand{\V}[1]{{\bm{#1}}}
-
-\DeclareMathOperator*{\argmax}{arg\,max}
-\DeclareMathOperator*{\argmin}{arg\,min}
-
-\newtheorem{thm}{定理}[section]
-\newtheorem{prop}[thm]{命题}
-\newtheorem{Def}[thm]{定义}
-\newtheorem{lem}[thm]{引理}
-\newtheorem{conj}[thm]{猜想}
-\newtheorem{cor}[thm]{推论}
-\newtheorem{remark}[thm]{注记}
-\newtheorem{eg}[thm]{例}
-\newtheorem{recall}[thm]{回忆}
-\newtheorem{question}[thm]{问题}
-\newtheorem{observation}[thm]{观察}
-
-\newcommand{\R}{\mathcal{R}}
-
-\numberwithin{equation}{section}
-
-\renewcommand\arraystretch{1.3}
-
-\allowdisplaybreaks
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\input{preamble.tex}
 
 \author{}
 \title{特殊优化模型方法}
