--- a/chap7_in_one.tex
+++ b/chap7_in_one.tex
@@ -3,11 +3,10 @@
 % TeX Live version: 2022
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\documentclass{SBCbookchapter}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% preamble
-\documentclass{SBCbookchapter}
-% \usepackage[utf8]{inputenc}
+% packages
 \usepackage[T1]{fontenc}
 \usepackage[english]{babel}
 \usepackage{graphicx}
@@ -79,6 +78,7 @@
 \renewcommand\arraystretch{1.3}
 
 \allowdisplaybreaks
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -548,14 +548,14 @@ q = \argmin_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)},
 \draw[-{Stealth}] (-0.3, 0) -- (4.7, 0) node [right] {$x_1$};
 \draw[-{Stealth}] (0, -0.3) -- (0, 3.7) node [above] {$x_2$};
 % feasible region
-\draw[fill=gray!20] (0, 1) node (p1) [left] {$(0, 1)$} -- (2, 2) node (p2) [above] {$(2, 2)$} -- (4, 1) node (p3) [right] {$(4, 1)$} -- (2, 0) node (p4) [below] {$(2, 0)$} -- (0, 0);
+\draw[fill=gray!20] (0, 1) node (p1) [left] {$(0, 1)$} -- (2, 2) node (p2) [above] {$(2, 2)$} -- (4, 1) node (p3) [right] {$(4, 1)$} -- (2, 0) node (p4) [below] {$(2, 0)$} -- (0, 0) -- (0, 1);
 % iterations of the active-set algorithm
 \node[below = -0.1 of p4] (x01) {$\V{x}^{(1)}, \V{x}^{(0)}$};
 \draw[dashed, line width=3] (2, 0) -- (1, 0) node (x23) [below] {$\V{x}^{(3)}, \V{x}^{(2)}$};
 \path[name path = line1] (0, 1) -- (2, 2);
 \path[name path = vertical1] (1, 0) -- (1, 4);
 \draw[dashed, line width=3, name intersections = {of = line1 and vertical1, by = {x4}}]  (1, 0) -- (x4);
-\node[below right = -0.2 and -0.1 of x4] (xx4) {$\V{x}^{(4)}$};
+\node[below right = -0.2 and -0.03 of x4] (xx4) {$\V{x}^{(4)}$};
 \draw[dashdotted, thin] (x4) -- (C) node[above] (barx3) {$\bar{\V{x}}^{(3)}$};
 \draw plot[only marks,mark=x,mark size=2] (C);
 \node[right = -0.2 of barx3] {\smaller 不可行};
