update algorithm2e settings

--- a/chap7_in_one.tex
+++ b/chap7_in_one.tex
@@ -31,6 +31,17 @@
 \renewcommand*{\algorithmcfname}{算法}
 \renewcommand*{\algorithmautorefname}{算法}
 
+\makeatletter
+\renewcommand{\Indentp}[1]{%
+  \advance\leftskip by #1
+  \advance\skiptext by -#1
+  \advance\skiprule by #1}%
+\renewcommand{\Indp}{\algocf@adjustskipindent\Indentp{\algoskipindent}}
+\renewcommand{\Indpp}{\Indentp{0.5em}}%
+\renewcommand{\Indm}{\algocf@adjustskipindent\Indentp{-\algoskipindent}}
+\renewcommand{\Indmm}{\Indentp{-0.5em}}%
+\makeatother
+
 \usepackage{tikz}
 \usetikzlibrary{trees,arrows.meta,decorations.pathmorphing,decorations.pathreplacing,shapes,shapes.geometric,backgrounds,positioning,calc,tikzmark,hobby,intersections}
 % \usepackage{tkz-euclide}
