--- a/chap7_in_one.tex
+++ b/chap7_in_one.tex
@@ -604,7 +604,7 @@ q = \argmin_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)},
 \path ([xshift=-0.3, yshift=2]x4) edge [draw, bend left, -{Stealth}] ([xshift=-1, yshift=2]x5);
 \fi
 \end{tikzpicture}
-\caption{积极集法求解例\ref{eg:qp-active-set-algo}的迭代示意图}
+\caption{积极集法求解例\ref{eg:qp-active-set-algo}~的迭代示意图}
 \label{fig:active-set-eg}
 \end{figure}
 
