update the font for vectors

--- a/preamble.tex
+++ b/preamble.tex
@@ -74,6 +74,7 @@
 \newtheorem{cor}[thm]{推论}
 \newtheorem{remark}[thm]{注记}
 \newtheorem{eg}[thm]{例}
+\newtheorem{exam}[thm]{例}
 \newtheorem{recall}[thm]{回忆}
 \newtheorem{question}[thm]{问题}
 \newtheorem{observation}[thm]{观察}
