--- a/chap7.tex
+++ b/chap7.tex
@@ -5,7 +5,7 @@
 
 \documentclass{SBCbookchapter}
 
-\input{preamble.tex}
+\input{preamble}
 
 \author{}
 \title{特殊优化模型方法}
@@ -33,7 +33,8 @@
 
 \input{content/exercises}
 
-\bibliographystyle{sbc}
-\bibliography{references}
+% \bibliographystyle{sbc}
+% \bibliography{references}
+\printbibliography[heading=bibintoc, title=参考文献]
 
 \end{document}
