--- a/preamble.tex
+++ b/preamble.tex
@@ -54,6 +54,15 @@
 \setCJKmonofont{Noto Sans Mono CJK SC}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% 参考文献工具，加载 biblatex 宏包，
+% 其后端 backend 使用 biber，%标注(引用)样式 citestyle，
+% 著录样式 bibstyle 都采用 gb7714-2015 样式，
+% 两者相同时可以合并为一个选项 style
+% https://ctan.org/pkg/biblatex-gb7714-2015?lang=en
+% https://www.overleaf.com/learn/latex/Articles/Getting_started_with_BibLaTeX
+\usepackage[backend=biber,style=gb7714-2015]{biblatex}
+\addbibresource[location=local]{references.bib}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % custom commands
